unpackaged/main/default/objects/aqi_ltng_mng__ArticleQuality_index__c/fields/aqi_ltng_mng__Content_complete__c.field-meta.xml
<CustomField>
    <fullName>aqi_ltng_mng__Content_complete__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Content complete</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>