unpackaged/main/default/objects/aqi_ltng_mng__ArticleQuality_index__c/fields/aqi_ltng_mng__Possible_Points__c.field-meta.xml
<CustomField>
    <fullName>aqi_ltng_mng__Possible_Points__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Possible points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>